=== HEAD

* Switch query extension to use a proxy instead of Object#extend (chanks, jeremyevans)

* Remove Dataset#def_mutiation_method instance method (jeremyevans)

* Make foreign key parsing on MySQL not pick up foreign keys in other databases (jeremyevans)

* Allow per-instance overrides of Postgres.force_standard_strings and .client_min_messages (jeremyevans) (#618)

* Add Sequel.tzinfo_disambiguator= to the named_timezones plugin for automatically handling TZInfo::AmbiguousTime exceptions (jeremyevans) (#616)

* Add Dataset#escape_like, for escaping LIKE metacharacters (jeremyevans) (#614)

* The LIKE operators now use an explicit ESCAPE '\' clause for similar behavior across databases (jeremyevans)

* Make Database#tables and #views accept a :qualify option on PostgreSQL to return qualified identifiers (jeremyevans)

* Make json_serializer and xml_serializer plugins secure by default (jeremyevans)

* Address JSON.parse vulnerabilities (jeremyevans)

* Fix Dataset#from_self! to no longer create a self-referential dataset (jeremyevans)

* Use SQLSTATE or database error codes if available instead of regexp parsing for more specific DatabaseErrors (jeremyevans)

* Add unlimited_update plugin to work around MySQL warning in replicated environments (jeremyevans)

* Add the :retry_on and :num_retries transaction options for automatically retrying transactions (jeremyevans)

* Raise serialization failures/deadlocks as Sequel::SerializationFailure exceptions (jeremyevans)

* Support transaction isolation levels on Oracle and DB2 (jeremyevans)

* Support transaction isolation levels when using the JDBC transaction support (jeremyevans)

=== 3.44.0 (2013-02-04)

* Speedup mysql2 adapter with identifier output method fetch speed by up to 50% (jeremyevans)

* Speedup tinytds adapter fetch speed by up to 60% (jeremyevans)

* Expand columns_introspection extension to consider cached schema values in the database (jeremyevans)
