@@ -1,5 +1,7 @@
 === HEAD
 
+* Make PostgreSQL metadata parsing handle tables with the same name in multiple schemas (jeremyevans)
+
 * Switch query extension to use a proxy instead of Object#extend (chanks, jeremyevans)
 
 * Remove Dataset#def_mutiation_method instance method (jeremyevans)
